--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </head>
-
+  
   <body>
 
     <div class="collapse" id="navbar-header">
@@ -33,7 +33,7 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1>Navbar example</h1>
+        <h1>Is This Thing On?</h1>
         <p class="lead">This example is a quick exercise to illustrate how the top-aligned navbar works. As you scroll, this navbar remains in its original position and moves with the rest of the page.</p>
         <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
       </div>
@@ -47,4 +47,3 @@
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
   </body>
 </html>
-
