--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Top navbar example for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" href="bootstrap-4.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets\bootstrap-4.css" media="screen">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </head>
-  
+
   <body>
 
     <div class="collapse" id="navbar-header">
