--- a/semantic.html
+++ b/semantic.html
@@ -8,7 +8,7 @@
 
   <!-- Site Properities -->
   <title>Homepage - Semantic</title>
-  <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets\semantic.css">
 
   <style type="text/css">
 
