--- a/INCA Pages/MIPP.html
+++ b/INCA Pages/MIPP.html
@@ -1,5 +1,8 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-564f2dc5282d67d0" async="async"></script>
+
 <style>
 	#column-left {
 		margin: 0px;
