--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -135,7 +135,7 @@
 		<div class="page-header">
 			<h2>VFD Application Challenges</h2>
 		</div>
-    		<p>Variable frequency drive (VFD) cables carry power from AC drive systems to AC motors. As a result, these cables must handle not only overall high power signals, but also the extremely high voltage which can occur when standing waves develop on the conductors.</p> 
+    		<p>Variable frequency drive (VFD) cables carry power from AC drive systems to AC motors. As a result, these cables must handle not only overall high power signals, but also the extremely high voltage which can occur when standing waves develop on the conductors.</p>
     		<p><strong>The main challenges of VFD applications include:</strong></p>
     		<p><i class="fa fa-exclamation-triangle"></i> Noise / Common Mode Current (CMC)</p>
     		<p><i class="fa fa-exclamation-triangle"></i> Reflected Wave Voltage</p>
@@ -143,7 +143,7 @@
     	<div class="page-header">
 			<h2>Typical Cabling Solutions</h2>
 		</div>
-			<p>Typical cabling solutions for this application have been unshielded tray cables, single-conductor THHN wire installed in conduit or continuously-welded armored cable.</p>  
+			<p>Typical cabling solutions for this application have been unshielded tray cables, single-conductor THHN wire installed in conduit or continuously-welded armored cable.</p>
 			<p>Not only do these products suffer from complex, costly installation and potential reliability problems, <strong>but they also:</strong></p>
 			<p><i class="fa fa-exclamation-triangle"></i> Have proven to be ineffective in resolving issues with radiated noise, voltage spikes and the service life of VFD systems</p>
 			<p><i class="fa fa-exclamation-triangle"></i> Degrade and fail in the in the face of voltage spikes and heat build-up</p>
@@ -156,6 +156,14 @@
 	</div>
 	<div class="ctas">
 		<div class="panel">
+			<h3>Cut Harmful Electrical Noise with Correct VFD Cabling Practices</h3>
+			<div class="panel-body">
+				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
+				<p>Download this white paper to learn about the challenges associated with the inherent characteristics of variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
+				<p><a style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-cdc-lp" target="_blank">Download Now</a></p>
+			</div>
+		</div>
+		<div class="panel">
 			<h3>Wire & Cable<br />Catalog</h3>
 			<div class="panel-body">
 				<p>Download the Wire & Cable Product Catalog for in-depth product information. View the entire portfolio and technical product information.</p>
@@ -163,7 +171,7 @@
 			</div>
 		</div>
 		<div class="panel">
-			<h3>MIPP Resources</h3>
+			<h3>VFD Cable Resources</h3>
 			<div class="panel-body">
 				<ul>
 				<li><a href="http://www.belden.com/docs/upload/BEC066_MIPP_16_page_brochure.pdf" target="_blank">MIPP Product Brochure</a></li>
