--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -115,6 +115,9 @@
 	margin-right: 10px;
 	color: #F7761F;
 }
+.fa-check-square-o {
+	color: #008744;
+}
 </style>
 </head>
 <div class="breadcrumbs">
@@ -153,6 +156,13 @@
 			<h2>The Belden Solution</h2>
 		</div>
 			<p>Belden offers an extensive line of VFD cables engineered to overcome these challenges, as well as total commitment to meet your product availability, product integrity and service needs. Hover over a product feature below to learn more.</p>
+			<p><i class="fa fa-check-square-o"></i> Our thicker, industrial-grade XLPE increases safety and performance in VFD applications</p>
+			<p><i class="fa fa-check-square-o"></i> Our jacket designs provide physical protection in the harshest environments with increased degrees of flexibility</p>
+			<p><i class="fa fa-check-square-o"></i> Our robust ground and shielding system protects equipment from disruption</p>
+			<p><i class="fa fa-check-square-o"></i> Our high-strand tinned copper circuit conductors</p>
+			<p><i class="fa fa-check-square-o"></i> Overall, our cable designs reliably carrying power from AC drive systems to AC motors while effectively eliminating downtime related to cable failure</p>
+			<p><i class="fa fa-check-square-o"></i> Designed to effectively handle the overall high power levels of pulse-width modulated (PWM) signals</p>
+			<p><i class="fa fa-check-square-o"></i> TC-ER rating allows for the elimination of conduit for easier and less expensive installations</p>
 	</div>
 	<div class="ctas">
 		<div class="panel">
@@ -174,10 +184,10 @@
 			<h3>VFD Cable Resources</h3>
 			<div class="panel-body">
 				<ul>
-				<li><a href="http://www.belden.com/docs/upload/BEC066_MIPP_16_page_brochure.pdf" target="_blank">MIPP Product Brochure</a></li>
-				<li><a href="https://www.belden.com/docs/upload/PB386_Belden-Modular-Industrial-Patch-Panel.pdf" target="_blank">MIPP Product Bulletin</a></li>
-				<li><a href="http://www.belden.com/docs/upload/Industrial-Networking-Solutions-Line-Card.pdf" target="_blank">Industrial Networking Line Card</a></li>
-				<li><a href="http://www.belden.com/resourcecenter/documents/upload/Industrial_Ethernet_Cable_Solutions_Brochure.pdf" target="_blank">Industrial Ethernet Cable Solutions</a></li>
+				<li><a href="http://www.belden.com/resourcecenter/tools/installguides/upload/VFD_Cable_Termination_Guide.pdf" target="_blank">VFD Termination Guide</a></li>
+				<li><a href="https://www.belden.com/docs/upload/NP316.pdf" target="_blank">VFD Cables Product Bulletin</a></li>
+				<li><a href="http://www.belden.com/docs/upload/Does-the-Type-of-Cable-Really-Matter-in-My-VFD-System_AN003_INCA_BDC_0813_A_AG_080713LONG_LR_Original_40104.pdf" target="_blank">Extending the Life of Your Motor</a></li>
+				<li><a href="http://www.belden.com/docs/upload/VFD_Cable_Reference_Guide.pdf" target="_blank">VFD Cable Reference Guide</a></li>
 				</ul>
 			</div>
 		</div>
