--- a/INCA Pages/Fiber-Cable.html
+++ b/INCA Pages/Fiber-Cable.html
@@ -248,6 +248,7 @@ table th[class*="col-"] {
 			<h3>Fiber Ethernet<br />Resources</h3>
 			<div class="panel-body">
 				<ul>
+				<li><a href="https://www.belden.com/docs/files/upload/TrayOptic-Industrial-Data-Solutions.pdf" target="_blank">TrayOptic Industrial Data Solutions</a></li>	
 				<li><a href="https://www.belden.com/docs/upload/End_User_Guide-End_User_Guide.pdf" target="_blank">Industrial Ethernet User Guide</a></li>
 				<li><a href="http://www.belden.com/resourcecenter/documents/upload/Industrial_Ethernet_Cable_Solutions_Brochure.pdf" target="_blank">Industrial Ethernet Cable Solutions</a></li>
 			</ul>
