--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -37,7 +37,7 @@
 	}
 	.hero {
 		width: 100%;
-		height: 278px;
+		height: 240px;
 		padding: 25px 15px 0px 15px;;
 		background-color: #BDC3C7;
 		border-top: 2px solid #e7e7e7;
@@ -45,13 +45,13 @@
 	}
 	.hero .image {
 		float: left;
-		width: 215px;
-		height: 235px;
-		margin-top: 15px;
+		width: 245px;
+		height: 182px;
+		margin-top: 30px;
 	}
 	.hero .text {
 		float: left;
-		width: 700px;
+		width: 670px;
 		margin-top: 20px;
 		padding-left: 15px;
 	}
@@ -116,6 +116,7 @@
 	color: #F7761F;
 }
 .fa-check-square-o {
+	margin-right: 10px;
 	color: #008744;
 }
 </style>
@@ -125,12 +126,12 @@
 </div>
 <div class="hero">
 	<h1>VFD Cable Solutions</h1>
-	<div class="image"><img src="/docs/images2/images/mipp.png" style="width: 170px; margin: auto; display: block;"></div>
+	<div class="image"><img src="/docs/images2/images/VFD-Cable.png" style="width: 250px; margin: auto; display: block;"></div>
 	<div class="text">
 		<p>Variable-frequency AC motor drive output cables are subject to harsh operating environments characterized by high voltage spikes, high noise levels and adverse environmental conditions.</p>
 		<p>As the original developer of high quality VFD cable, Belden provides superior electrical performance and reliability, even in the most demanding industrial environments.</p>
 		<br>
-		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/mipp-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a></p>
+		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/vfd-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Categories/Category_41311" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
 	</div>
 </div>
 <div class="content">
@@ -155,7 +156,7 @@
 		<div class="page-header">
 			<h2>The Belden Solution</h2>
 		</div>
-			<p>Belden offers an extensive line of VFD cables engineered to overcome these challenges, as well as total commitment to meet your product availability, product integrity and service needs. Hover over a product feature below to learn more.</p>
+			<p>Belden offers an extensive line of VFD cables engineered to overcome these challenges, as well as total commitment to meet your product availability, product integrity and service needs.</p>
 			<p><i class="fa fa-check-square-o"></i> Our thicker, industrial-grade XLPE increases safety and performance in VFD applications</p>
 			<p><i class="fa fa-check-square-o"></i> Our jacket designs provide physical protection in the harshest environments with increased degrees of flexibility</p>
 			<p><i class="fa fa-check-square-o"></i> Our robust ground and shielding system protects equipment from disruption</p>
@@ -169,7 +170,7 @@
 			<h3>Cut Harmful Electrical Noise with Correct VFD Cabling Practices</h3>
 			<div class="panel-body">
 				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
-				<p>Download this white paper to learn about the challenges associated with the inherent characteristics of variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
+				<p>Download this white paper to learn about the challenges associated with variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
 				<p><a style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-cdc-lp" target="_blank">Download Now</a></p>
 			</div>
 		</div>
