--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -142,7 +142,12 @@
     		<p>Variable frequency drive (VFD) cables carry power from AC drive systems to AC motors. As a result, these cables must handle not only overall high power signals, but also the extremely high voltage which can occur when standing waves develop on the conductors.</p>
     		<p><strong>The main challenges of VFD applications include:</strong></p>
     		<p><i class="fa fa-exclamation-triangle"></i> Noise / Common Mode Current (CMC)</p>
+				<div style="margin-left: 40px;"><p>- Current leaves cable and returns to drive through unwanted ground paths such as the enclosure<br>
+					- Capacitive Coupling (Cable Charging)<br>
+					- Current Reduced from motor to drive as unwanted current leaves certain conductors and may be induced onto other conductors</p>
+				</div>
     		<p><i class="fa fa-exclamation-triangle"></i> Reflected Wave Voltage</p>
+				<div style="margin-left: 40px;"><p>- High voltage electrical pulses that break down insulation</p></div>
     		<p><i class="fa fa-exclamation-triangle"></i> System Reliability & Safety</p>
     	<div class="page-header">
 			<h2>Typical Cabling Solutions</h2>
