--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -68,6 +68,17 @@
 		padding: 15px;
 		float: left;
 	}
+	.callout {
+		padding: 10px;
+		background-color: #e7e7e7;
+		margin-bottom: 10px;
+	}
+	.callout .copy {
+		margin-left: 30px;
+	}
+	.callout p {
+		padding-bottom: 5px;
+	}
 	.content .ctas {
 		width: 205px;
 		padding: 10px;
@@ -119,6 +130,17 @@
 	margin-right: 10px;
 	color: #008744;
 }
+.solution {
+	width: 700px;
+}
+.solution .vfd-image {
+	float: left;
+	width: 180px;
+}
+.solution .vfd-copy {
+	float: left;
+	width: 520px;
+}
 </style>
 </head>
 <div class="breadcrumbs">
@@ -141,34 +163,92 @@
 		</div>
     		<p>Variable frequency drive (VFD) cables carry power from AC drive systems to AC motors. As a result, these cables must handle not only overall high power signals, but also the extremely high voltage which can occur when standing waves develop on the conductors.</p>
     		<p><strong>The main challenges of VFD applications include:</strong></p>
-    		<p><i class="fa fa-exclamation-triangle"></i> Noise / Common Mode Current (CMC)</p>
-				<div style="margin-left: 40px;"><p>- Current leaves cable and returns to drive through unwanted ground paths such as the enclosure<br>
+    		<div class="callout">
+    			<p><i class="fa fa-exclamation-triangle"></i> <strong>Noise / Common Mode Current (CMC)</strong></p>
+					<div class="copy"><p>- Current leaves cable and returns to drive through unwanted ground paths such as the enclosure<br>
 					- Capacitive Coupling (Cable Charging)<br>
 					- Current Reduced from motor to drive as unwanted current leaves certain conductors and may be induced onto other conductors</p>
+					</div>
+    		</div>
+    		<div class="callout">
+    			<p><i class="fa fa-exclamation-triangle"></i> <strong>Reflected Wave Voltage</strong></p>
+				<div class="copy">
+					<p>- High voltage electrical pulses that break down insulation</p>
 				</div>
-    		<p><i class="fa fa-exclamation-triangle"></i> Reflected Wave Voltage</p>
-				<div style="margin-left: 40px;"><p>- High voltage electrical pulses that break down insulation</p></div>
-    		<p><i class="fa fa-exclamation-triangle"></i> System Reliability & Safety</p>
+    		</div>
+    		<div class="callout" style="margin-bottom: 30px;">
+    			<p><i class="fa fa-exclamation-triangle"></i> <strong>System Reliability & Safety</strong></p>
+    		</div>
     	<div class="page-header">
 			<h2>Typical Cabling Solutions</h2>
 		</div>
 			<p>Typical cabling solutions for this application have been unshielded tray cables, single-conductor THHN wire installed in conduit or continuously-welded armored cable.</p>
 			<p>Not only do these products suffer from complex, costly installation and potential reliability problems, <strong>but they also:</strong></p>
-			<p><i class="fa fa-exclamation-triangle"></i> Have proven to be ineffective in resolving issues with radiated noise, voltage spikes and the service life of VFD systems</p>
-			<p><i class="fa fa-exclamation-triangle"></i> Degrade and fail in the in the face of voltage spikes and heat build-up</p>
-			<p><i class="fa fa-exclamation-triangle"></i> Do not protect against capacitive coupling (cable charging) , resulting in reduced motor torque, false motor trips and currents being induced onto other systems, introducing risk to human safety</p>
-			<p><i class="fa fa-exclamation-triangle"></i> Are not recommended by most drive manufacturers for use in VFD applications</p>
+			<div class="callout">
+				<p><i class="fa fa-exclamation-triangle"></i> Have proven to be ineffective in resolving issues with radiated noise, voltage spikes and the service life of VFD systems</p>
+			</div>
+			<div class="callout">
+				<p><i class="fa fa-exclamation-triangle"></i> Degrade and fail in the in the face of voltage spikes and heat build-up</p>
+			</div>
+			<div class="callout">
+				<p><i class="fa fa-exclamation-triangle"></i> Do not protect against capacitive coupling (cable charging) , resulting in reduced motor torque, false motor trips and currents being induced onto other systems, introducing risk to human safety</p>
+			</div>
+			<div class="callout" style="margin-bottom: 30px;">
+				<p><i class="fa fa-exclamation-triangle"></i> Are not recommended by most drive manufacturers for use in VFD applications</p>
+			</div>
 		<div class="page-header">
 			<h2>The Belden Solution</h2>
 		</div>
-			<p>Belden offers an extensive line of VFD cables engineered to overcome these challenges, as well as total commitment to meet your product availability, product integrity and service needs.</p>
-			<p><i class="fa fa-check-square-o"></i> Our thicker, industrial-grade XLPE increases safety and performance in VFD applications</p>
-			<p><i class="fa fa-check-square-o"></i> Our jacket designs provide physical protection in the harshest environments with increased degrees of flexibility</p>
-			<p><i class="fa fa-check-square-o"></i> Our robust ground and shielding system protects equipment from disruption</p>
-			<p><i class="fa fa-check-square-o"></i> Our high-strand tinned copper circuit conductors</p>
-			<p><i class="fa fa-check-square-o"></i> Overall, our cable designs reliably carrying power from AC drive systems to AC motors while effectively eliminating downtime related to cable failure</p>
-			<p><i class="fa fa-check-square-o"></i> Designed to effectively handle the overall high power levels of pulse-width modulated (PWM) signals</p>
-			<p><i class="fa fa-check-square-o"></i> TC-ER rating allows for the elimination of conduit for easier and less expensive installations</p>
+		<p>Belden offers an extensive line of VFD cables engineered to overcome these challenges, as well as total commitment to meet your product availability, product integrity and service needs.</p>
+		<div class="solution">
+			<div class="vfd-image">
+				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_1.png">
+			</div>
+			<div class="vfd-copy">
+				<div class="callout">
+					<h3><i class="fa fa-check-square-o"></i> Conductors</h3>
+					<p><strong>Our high-strand tinned copper circuit conductors:</strong></p>
+					<div class="copy">
+						<p>- Are more flexible for ease of installation<br>
+					- Provide better vibration resistance than bare copper<br>
+					- Are numbered for ease of installation</p>
+					</div>
+    			</div>
+    			<div class="callout">
+					<h3><i class="fa fa-check-square-o"></i> Insulation</h3>
+					<p><strong>Our thicker, industrial-grade XLPE increases safety and performance in VFD applications:</strong></p>
+					<div class="copy">
+						<p>- More stable electrical performance than PVC<br>
+					- Lower capacitance, resulting in:<br></p>
+					<div style="margin-left: 40px;">
+					<p>- Extended motor life<br>
+					- Reduced likelihood of corona discharge<br>
+					- Reduced magnitude of standing waves<br>
+					- Increased efficiency of power transfer<br>
+					- Longer cable runs than typical cabling solutions
+					</p>
+					</div>
+					</div>
+				</div>
+				<div class="callout">
+					<h3><i class="fa fa-check-square-o"></i> Grounding/Shielding</h3>
+					<p><strong>Our robust ground and shielding system protects equipment from disruption:</strong><p>
+					<div class="copy">
+						<p>- Minimizes radiated and conducted noise<br>
+					- Reduces or electromagnetic interference (EMI)</p>
+					</div>
+				</div>
+				<div class="callout">
+					<h3><i class="fa fa-check-square-o"></i> Jackets</h3>
+					<p><strong>Our jacket designs provide physical protection in the harshest environments with increased degrees of flexibility:</strong>
+					<div class="copy">
+						<p>- Industrial-grade PVC jackets provide sunlight and oil resistance with a strong degree of flexibility<br>
+					- Industrial-grade TPE jackets provide sunlight and oil resistance with extreme flexibility in continuous flex and flexible designs<br>
+					- Haloarrest jackets are halogen-free and provide sunlight resistance in LSZH versions</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="ctas">
 		<div class="panel">
@@ -176,7 +256,7 @@
 			<div class="panel-body">
 				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
 				<p>Download this white paper to learn about the challenges associated with variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
-				<p><a style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank">Download Now</a></p>
+				<p><a id="vfd" style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank">Download Now</a></p>
 			</div>
 		</div>
 		<div class="panel">
