--- a/INCA Pages/Fiber-Cable.html
+++ b/INCA Pages/Fiber-Cable.html
@@ -172,7 +172,7 @@ table th[class*="col-"] {
 </style>
 </head>
 <div class="breadcrumbs">
-		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Ethernet / Fiber Cable</p>
+		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / <a href="http://www.belden.com/products/industrialcable/ethernet-cables/index.cfm">Ethernet Cables</a> / Fiber Cable</p>
 </div>
 <div class="hero">
 	<h1>Fiber Ethernet Cabling Solutions</h1>
@@ -248,7 +248,7 @@ table th[class*="col-"] {
 			<h3>Fiber Ethernet<br />Resources</h3>
 			<div class="panel-body">
 				<ul>
-				<li><a href="https://www.belden.com/docs/files/upload/TrayOptic-Industrial-Data-Solutions.pdf" target="_blank">TrayOptic Industrial Data Solutions</a></li>	
+				<li><a href="https://www.belden.com/docs/files/upload/TrayOptic-Industrial-Data-Solutions.pdf" target="_blank">TrayOptic Industrial Data Solutions</a></li>
 				<li><a href="https://www.belden.com/docs/upload/End_User_Guide-End_User_Guide.pdf" target="_blank">Industrial Ethernet User Guide</a></li>
 				<li><a href="http://www.belden.com/resourcecenter/documents/upload/Industrial_Ethernet_Cable_Solutions_Brochure.pdf" target="_blank">Industrial Ethernet Cable Solutions</a></li>
 			</ul>
