--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -165,15 +165,18 @@
     		<p><strong>The main challenges of VFD applications include:</strong></p>
     		<div class="callout">
     			<p><i class="fa fa-exclamation-triangle"></i> <strong>Noise / Common Mode Current (CMC)</strong></p>
-					<div class="copy"><p>- Current leaves cable and returns to drive through unwanted ground paths such as the enclosure<br>
-					- Capacitive Coupling (Cable Charging)<br>
-					- Current Reduced from motor to drive as unwanted current leaves certain conductors and may be induced onto other conductors</p>
+					<div class="copy"><p>- Current leaves cable and returns to the drive through unwanted ground paths such as the enclosure.
+					</div>
+    		</div>
+    		<div class="callout">
+    			<p><i class="fa fa-exclamation-triangle"></i> <strong>Capacitive Coupling (Cable Charging)</strong></p>
+					<div class="copy"><p>- Current reduced from motor to drive as unwanted current leaves certain conductors and may be induced onto other conductors.</p>
 					</div>
     		</div>
     		<div class="callout">
     			<p><i class="fa fa-exclamation-triangle"></i> <strong>Reflected Wave Voltage</strong></p>
 				<div class="copy">
-					<p>- High voltage electrical pulses that break down insulation</p>
+					<p>- High voltage electrical pulses which break down insulation.</p>
 				</div>
     		</div>
     		<div class="callout" style="margin-bottom: 30px;">
@@ -185,21 +188,21 @@
 			<p>Typical cabling solutions for this application have been unshielded tray cables, single-conductor THHN wire installed in conduit or continuously-welded armored cable.</p>
 			<p>Not only do these products suffer from complex, costly installation and potential reliability problems, <strong>but they also:</strong></p>
 			<div class="callout">
-				<p><i class="fa fa-exclamation-triangle"></i> Have proven to be ineffective in resolving issues with radiated noise, voltage spikes and the service life of VFD systems</p>
+				<p><i class="fa fa-exclamation-triangle"></i> Have proven to be ineffective in resolving issues with radiated noise, voltage spikes and the service life of VFD systems.</p>
 			</div>
 			<div class="callout">
-				<p><i class="fa fa-exclamation-triangle"></i> Degrade and fail in the in the face of voltage spikes and heat build-up</p>
+				<p><i class="fa fa-exclamation-triangle"></i> Degrade and fail in the in the face of voltage spikes and heat build-up.</p>
 			</div>
 			<div class="callout">
-				<p><i class="fa fa-exclamation-triangle"></i> Do not protect against capacitive coupling (cable charging) , resulting in reduced motor torque, false motor trips and currents being induced onto other systems, introducing risk to human safety</p>
+				<p><i class="fa fa-exclamation-triangle"></i> Do not protect against capacitive coupling (cable charging), resulting in reduced motor torque, false motor trips and currents being induced onto other systems, introducing risk to human safety.</p>
 			</div>
 			<div class="callout" style="margin-bottom: 30px;">
-				<p><i class="fa fa-exclamation-triangle"></i> Are not recommended by most drive manufacturers for use in VFD applications</p>
+				<p><i class="fa fa-exclamation-triangle"></i> Are not recommended by most drive manufacturers for use in VFD applications.</p>
 			</div>
 		<div class="page-header">
 			<h2>The Belden Solution</h2>
 		</div>
-		<p>Belden offers an extensive line of VFD cables engineered to overcome these challenges, as well as total commitment to meet your product availability, product integrity and service needs.</p>
+		<p>Belden offers an extensive line of VFD cables engineered for optimum electrical performance and physical toughness, going well beyond the minimum UL specifications.</p>
 		<div class="solution">
 			<div class="vfd-image">
 				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_1.png">
@@ -210,32 +213,35 @@
 					<p><strong>Our high-strand tinned copper circuit conductors:</strong></p>
 					<div class="copy">
 						<p>- Are more flexible for ease of installation<br>
-					- Provide better vibration resistance than bare copper<br>
-					- Are numbered for ease of installation</p>
+					- Improve vibration resistance for a more reliable connection<br>
+					- Provide better corrosion resistance than bare copper</p>
 					</div>
     			</div>
     			<div class="callout">
 					<h3><i class="fa fa-check-square-o"></i> Insulation</h3>
-					<p><strong>Our thicker, industrial-grade XLPE increases safety and performance in VFD applications:</strong></p>
+					<p><strong>Our thicker, industrial-grade XLPE insulation increases safety and performance in VFD applications while providing:</strong></p>
 					<div class="copy">
 						<p>- More stable electrical performance than PVC<br>
 					- Lower capacitance, resulting in:<br></p>
 					<div style="margin-left: 40px;">
-					<p>- Extended motor life<br>
-					- Reduced likelihood of corona discharge<br>
-					- Reduced magnitude of standing waves<br>
-					- Increased efficiency of power transfer<br>
-					- Longer cable runs than typical cabling solutions
+					<p>- Protection against reflected wave voltage by reducing the magnitude of standing waves<br>
+					- Minimized capacitive coupling (cable charging) through increased efficiency of power transfer <br>
+					- Extended motor life<br>
 					</p>
 					</div>
 					</div>
 				</div>
 				<div class="callout">
 					<h3><i class="fa fa-check-square-o"></i> Grounding/Shielding</h3>
-					<p><strong>Our robust ground and shielding system protects equipment from disruption:</strong><p>
+					<p><strong>Our robust ground and shielding system protects equipment from disruption by:</strong><p>
 					<div class="copy">
-						<p>- Minimizes radiated and conducted noise<br>
-					- Reduces or electromagnetic interference (EMI)</p>
+						<p>- Minimizing radiated and conducted noise</p>
+						<div style="margin-left: 40px;">
+							<p>- Use of 300% ground (to circuit conductor) cable design most effectively controls common mode current for smaller drives<br>
+							- Use of 100% ground (to circuit conductor) cable design more effectively controls common mode current for larger drives</p>
+						</div>
+					<p>- Reducing or eliminating electromagnetic interference (EMI)</p>
+						
 					</div>
 				</div>
 				<div class="callout">
@@ -243,8 +249,8 @@
 					<p><strong>Our jacket designs provide physical protection in the harshest environments with increased degrees of flexibility:</strong>
 					<div class="copy">
 						<p>- Industrial-grade PVC jackets provide sunlight and oil resistance with a strong degree of flexibility<br>
-					- Industrial-grade TPE jackets provide sunlight and oil resistance with extreme flexibility in continuous flex and flexible designs<br>
-					- Haloarrest jackets are halogen-free and provide sunlight resistance in LSZH versions</p>
+					- Industrial-grade TPE jackets provide sunlight, oil, and weldsplatter resistance in extra flexible and continuous flex designs<br>
+					- Halogen-free jackets provide sunlight resistance in LSZH versions</p>
 					</div>
 				</div>
 			</div>
@@ -270,8 +276,9 @@
 			<h3>VFD Cable Resources</h3>
 			<div class="panel-body">
 				<ul>
+				<li><a href="https://www.belden.com/products/industrialcable/upload/VFD-Cable-Solutions-Brochure_100114LONG_LR.pdf" target="_blank">VFD Cable Solutions</a></li>	
 				<li><a href="http://www.belden.com/resourcecenter/tools/installguides/upload/VFD_Cable_Termination_Guide.pdf" target="_blank">VFD Termination Guide</a></li>
-				<li><a href="https://www.belden.com/docs/upload/NP316.pdf" target="_blank">VFD Cables Product Bulletin</a></li>
+				<li><a href="https://www.belden.com/products/industrialcable/upload/MARINETUFF-OFFSHORE-AND-MARINE-CABLE-SOLUTIONS_CA_INCA_BDC_0415_A_APAC-LO_Original_86235.pdf" target="_blank">Offshore and Marine Cabling Solutions</a></li>
 				<li><a href="http://www.belden.com/docs/upload/Does-the-Type-of-Cable-Really-Matter-in-My-VFD-System_AN003_INCA_BDC_0813_A_AG_080713LONG_LR_Original_40104.pdf" target="_blank">Extending the Life of Your Motor</a></li>
 				<li><a href="http://www.belden.com/docs/upload/VFD_Cable_Reference_Guide.pdf" target="_blank">VFD Cable Reference Guide</a></li>
 				</ul>
