--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -131,15 +131,16 @@
 	color: #008744;
 }
 .solution {
-	width: 700px;
+	width: 100%;
 }
 .solution .vfd-image {
 	float: left;
-	width: 180px;
+	width: 150px;
 }
 .solution .vfd-copy {
 	float: left;
-	width: 520px;
+	width: 570px;
+	margin-right: 20px;
 }
 </style>
 </head>
@@ -199,13 +200,47 @@
 			<div class="callout" style="margin-bottom: 30px;">
 				<p><i class="fa fa-exclamation-triangle"></i> Are not recommended by most drive manufacturers for use in VFD applications.</p>
 			</div>
-		<div class="page-header">
+		
+	</div>
+	<div class="ctas">
+		<div class="panel">
+			<h3>Cut Harmful Electrical Noise with Correct VFD Cabling Practices</h3>
+			<div class="panel-body">
+				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
+				<p>Download this white paper to learn about the challenges associated with variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
+				<p><a id="vfd" style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank">Download Now</a></p>
+			</div>
+		</div>
+		<div class="panel">
+			<h3>Wire & Cable<br />Catalog</h3>
+			<div class="panel-body">
+				<p>Download the Wire & Cable Product Catalog for in-depth product information. View the entire portfolio and technical product information.</p>
+				<p><a style="float: left; color:#fff; text-align:center; background-color:#545454; padding:8px 0px; border-radius:3px; width: 100%;" target="_blank" href="http://www.belden.com/docs/upload/Cabling-Solutions-for-Industrial-Applications.pdf">Download My Catalog</a></p>
+			</div>
+		</div>
+		<div class="panel">
+			<h3>VFD Cable Resources</h3>
+			<div class="panel-body">
+				<ul>
+				<li><a href="https://www.belden.com/docs/files/upload/VFD-Brochure.pdf" target="_blank">VFD Cable Solutions</a></li>
+				<li><a href="http://www.belden.com/resourcecenter/tools/installguides/upload/VFD_Cable_Termination_Guide.pdf" target="_blank">VFD Termination Guide</a></li>
+				<li><a href="https://www.belden.com/products/industrialcable/upload/MARINETUFF-OFFSHORE-AND-MARINE-CABLE-SOLUTIONS_CA_INCA_BDC_0415_A_APAC-LO_Original_86235.pdf" target="_blank">Offshore and Marine Cabling Solutions</a></li>
+				<li><a href="http://www.belden.com/docs/upload/Does-the-Type-of-Cable-Really-Matter-in-My-VFD-System_AN003_INCA_BDC_0813_A_AG_080713LONG_LR_Original_40104.pdf" target="_blank">Extending the Life of Your Motor</a></li>
+				<li><a href="http://www.belden.com/docs/upload/VFD_Cable_Reference_Guide.pdf" target="_blank">VFD Cable Reference Guide</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="content">
+<div class="page-header">
 			<h2>The Belden Solution</h2>
 		</div>
 		<p>Belden offers an extensive line of VFD cables engineered for optimum electrical performance and physical toughness, going well beyond the minimum UL specifications.</p>
 		<div class="solution">
 			<div class="vfd-image">
-				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_1.png">
+				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_2.png" style="margin-right: 20px;">
 			</div>
 			<div class="vfd-copy">
 				<div class="callout">
@@ -254,35 +289,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<div class="ctas">
-		<div class="panel">
-			<h3>Cut Harmful Electrical Noise with Correct VFD Cabling Practices</h3>
-			<div class="panel-body">
-				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
-				<p>Download this white paper to learn about the challenges associated with variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
-				<p><a id="vfd" style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank">Download Now</a></p>
-			</div>
-		</div>
-		<div class="panel">
-			<h3>Wire & Cable<br />Catalog</h3>
-			<div class="panel-body">
-				<p>Download the Wire & Cable Product Catalog for in-depth product information. View the entire portfolio and technical product information.</p>
-				<p><a style="float: left; color:#fff; text-align:center; background-color:#545454; padding:8px 0px; border-radius:3px; width: 100%;" target="_blank" href="http://www.belden.com/docs/upload/Cabling-Solutions-for-Industrial-Applications.pdf">Download My Catalog</a></p>
-			</div>
-		</div>
-		<div class="panel">
-			<h3>VFD Cable Resources</h3>
-			<div class="panel-body">
-				<ul>
-				<li><a href="https://www.belden.com/docs/files/upload/VFD-Brochure.pdf" target="_blank">VFD Cable Solutions</a></li>
-				<li><a href="http://www.belden.com/resourcecenter/tools/installguides/upload/VFD_Cable_Termination_Guide.pdf" target="_blank">VFD Termination Guide</a></li>
-				<li><a href="https://www.belden.com/products/industrialcable/upload/MARINETUFF-OFFSHORE-AND-MARINE-CABLE-SOLUTIONS_CA_INCA_BDC_0415_A_APAC-LO_Original_86235.pdf" target="_blank">Offshore and Marine Cabling Solutions</a></li>
-				<li><a href="http://www.belden.com/docs/upload/Does-the-Type-of-Cable-Really-Matter-in-My-VFD-System_AN003_INCA_BDC_0813_A_AG_080713LONG_LR_Original_40104.pdf" target="_blank">Extending the Life of Your Motor</a></li>
-				<li><a href="http://www.belden.com/docs/upload/VFD_Cable_Reference_Guide.pdf" target="_blank">VFD Cable Reference Guide</a></li>
-				</ul>
+			<div class="vfd-image">
+				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_1.png">
 			</div>
 		</div>
 	</div>
-</div>
