--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -139,8 +139,9 @@
 }
 .solution .vfd-copy {
 	float: left;
-	width: 570px;
+	width: 585px;
 	margin-right: 20px;
+	margin-left: 20px;
 }
 </style>
 </head>
@@ -207,14 +208,14 @@
 			<h3>Cut Harmful Electrical Noise with Correct VFD Cabling Practices</h3>
 			<div class="panel-body">
 				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
-				<p>Download this white paper to learn about the challenges associated with variable frequency drive (VFD) installations and how to select the right cable for VFD motor connections</p>
+				<p>Learn the challenges with VFD installations and how to select the right cable for VFD motor connections.</p>
 				<p><a id="vfd" style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank">Download Now</a></p>
 			</div>
 		</div>
 		<div class="panel">
 			<h3>Wire & Cable<br />Catalog</h3>
 			<div class="panel-body">
-				<p>Download the Wire & Cable Product Catalog for in-depth product information. View the entire portfolio and technical product information.</p>
+				<p>Download the Wire & Cable Product Catalog for in-depth and technical product information.</p>
 				<p><a style="float: left; color:#fff; text-align:center; background-color:#545454; padding:8px 0px; border-radius:3px; width: 100%;" target="_blank" href="http://www.belden.com/docs/upload/Cabling-Solutions-for-Industrial-Applications.pdf">Download My Catalog</a></p>
 			</div>
 		</div>
@@ -233,14 +234,14 @@
 	</div>
 </div>
 
-<div class="content">
-<div class="page-header">
-			<h2>The Belden Solution</h2>
-		</div>
+<div style="width: 930px; padding: 15px;">
+	<div class="page-header">
+		<h2>The Belden Solution</h2>
+	</div>
 		<p>Belden offers an extensive line of VFD cables engineered for optimum electrical performance and physical toughness, going well beyond the minimum UL specifications.</p>
 		<div class="solution">
 			<div class="vfd-image">
-				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_2.png" style="margin-right: 20px;">
+				<img src="http://www.belden.com/docs/images2/images/VFD-Cable_2.png">
 			</div>
 			<div class="vfd-copy">
 				<div class="callout">
